// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardView /> mutliple items render properly 1`] = `
Array [
  <div
    className="rsccard__card card"
    key="0"
  >
    <div
      className="card-body"
    >
      <div
        className="rsccard__img"
      >
        <ContentImage
          contentUrl="https://connect.tester.net/content/991f16c5-dc7e-4403-89d0-c54d10968460/"
          imageUrl="https://connect.tester.net/__api__/applications/991f16c5-dc7e-4403-89d0-c54d10968460/image?strict=1"
        />
      </div>
      <div
        className="rsccard__meta"
      >
        <div
          className="rsccard__meta-author text-muted"
        >
          <small>
            <span>
              Porter_Terry
            </span>
             • 
            <time>
              Oct 30, 2020
            </time>
          </small>
        </div>
        <h2
          className="rsccard__meta-title"
        >
          methodical synergize
        </h2>
        <p
          className="rsccard__meta-description"
        >
          Lorem ipsum dolor sit amet
        </p>
        <a
          className="rsccard__meta-link btn btn-primary btn-sm"
          href="https://connect.tester.net/content/991f16c5-dc7e-4403-89d0-c54d10968460/"
          rel="noreferrer"
          target="_blank"
        >
          Open Content
        </a>
      </div>
    </div>
  </div>,
  <div
    className="rsccard__card card"
    key="1"
  >
    <div
      className="card-body"
    >
      <div
        className="rsccard__img"
      >
        <ContentImage
          contentUrl="https://connect.tester.net/content/c2bd6807-cb2f-4683-865b-107cf37eddf6/"
          imageUrl="https://connect.tester.net/__api__/applications/c2bd6807-cb2f-4683-865b-107cf37eddf6/image?strict=1"
        />
      </div>
      <div
        className="rsccard__meta"
      >
        <div
          className="rsccard__meta-author text-muted"
        >
          <small>
            <span>
              Navarro.BigBand
            </span>
             • 
            <time>
              Sep 16, 2020
            </time>
          </small>
        </div>
        <h2
          className="rsccard__meta-title"
        >
          incredible peanuts
        </h2>
        <p
          className="rsccard__meta-description"
        >
          Maecenas more than ipsum and three dogs
        </p>
        <a
          className="rsccard__meta-link btn btn-primary btn-sm"
          href="https://connect.tester.net/content/c2bd6807-cb2f-4683-865b-107cf37eddf6/"
          rel="noreferrer"
          target="_blank"
        >
          Open Content
        </a>
      </div>
    </div>
  </div>,
  <div
    className="rsccard__card card"
    key="2"
  >
    <div
      className="card-body"
    >
      <div
        className="rsccard__img"
      >
        <ContentImage
          contentUrl="https://connect.tester.net/content/ea731b93-458f-4552-becf-b2e0ce552e3d/"
          imageUrl="https://connect.tester.net/__api__/applications/ea731b93-458f-4552-becf-b2e0ce552e3d/image?strict=1"
        />
      </div>
      <div
        className="rsccard__meta"
      >
        <div
          className="rsccard__meta-author text-muted"
        >
          <small>
            <span>
              Bob.C.Martin
            </span>
             • 
            <time>
              Sep 21, 2020
            </time>
          </small>
        </div>
        <h2
          className="rsccard__meta-title"
        >
          clean coder
        </h2>
        <p
          className="rsccard__meta-description"
        >
          a book on the shelve
        </p>
        <a
          className="rsccard__meta-link btn btn-primary btn-sm"
          href="https://connect.tester.net/content/ea731b93-458f-4552-becf-b2e0ce552e3d/"
          rel="noreferrer"
          target="_blank"
        >
          Open Content
        </a>
      </div>
    </div>
  </div>,
]
`;

exports[`<CardView /> single item render properly 1`] = `
<div
  className="rsccard__card card"
  key="0"
>
  <div
    className="card-body"
  >
    <div
      className="rsccard__img"
    >
      <ContentImage
        contentUrl="https://connect.tester.net/content/991f16c5-dc7e-4403-89d0-c54d10968460/"
        imageUrl="https://connect.tester.net/__api__/applications/991f16c5-dc7e-4403-89d0-c54d10968460/image?strict=1"
      />
    </div>
    <div
      className="rsccard__meta"
    >
      <div
        className="rsccard__meta-author text-muted"
      >
        <small>
          <span>
            Porter_Terry
          </span>
           • 
          <time>
            Oct 30, 2020
          </time>
        </small>
      </div>
      <h2
        className="rsccard__meta-title"
      >
        methodical synergize
      </h2>
      <p
        className="rsccard__meta-description"
      >
        Lorem ipsum dolor sit amet
      </p>
      <a
        className="rsccard__meta-link btn btn-primary btn-sm"
        href="https://connect.tester.net/content/991f16c5-dc7e-4403-89d0-c54d10968460/"
        rel="noreferrer"
        target="_blank"
      >
        Open Content
      </a>
    </div>
  </div>
</div>
`;
